# music-album-system-project

./: .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml
data/: albums.db  albums.json
notebooks/: exploratory_analysis.ipynb
src/: analysis.py  crud.py  db_manager.py  enrichment.py  handlers.py  spotify_client.py  sql_analysis.py  sql_crud.py  visualization.py
src/utils/: utils.py
tests/: conftest.py  test_analysis.py  test_enrichment.py  test_handlers.py  test_sql_analysis.py  test_sql_crud.py  test_utils.py
