[project]
name = "projeto-musicas-dados"
version = "0.1.0"
description = "Sistema de análise de álbuns musicais com SQLite, Streamlit e Spotify API"
authors = [{ name = "Filipe Madeira", email = "cfilipemadeira@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "matplotlib>=3.10.3,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "plotly>=6.1.2,<7.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "nbformat>=5.10.4,<6.0.0",
    "streamlit",
    "spotipy",
    "python-dotenv",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
